force-app/main/default/objects/MUSW__Experience__c/MUSW__Experience__c.object-meta.xml
<CustomObject>
    <label>Experience</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Experiences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>