force-app/main/default/objects/MUSW__Experience__c/fields/MUSW__Business_Email__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Business_Email__c</fullName>
    <label>Business Email</label>
    <type>Email</type>
</CustomField>