force-app/main/default/objects/MUSW__Experience__c/fields/MUSW__Business_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Business_Name__c</fullName>
    <label>Business Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>