force-app/main/default/objects/MUSW__Experience__c/fields/MUSW__Business_Phone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Business_Phone__c</fullName>
    <label>Business Phone</label>
    <type>Phone</type>
</CustomField>