force-app/main/default/objects/MUSW__Experience__c/fields/MUSW__Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Manager_Email__c</fullName>
    <label>Manager Email</label>
    <type>Email</type>
</CustomField>