force-app/main/default/objects/MUSW__Experience__c/fields/MUSW__Manager_First_Name__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Manager_First_Name__c</fullName>
    <label>Manager First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>