force-app/main/default/objects/MUSW__Experience__c/fields/MUSW__Manager_Phone__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Manager_Phone__c</fullName>
    <label>Manager Phone</label>
    <type>Phone</type>
</CustomField>