force-app/main/default/objects/MUSW__Experience__c/fields/MUSW__Related_Contact__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Related_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The contact who this Experience is related to.</description>
    <label>Related Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Experiences</relationshipLabel>
    <relationshipName>Experiences</relationshipName>
    <type>Lookup</type>
</CustomField>