force-app/main/default/objects/MUSW__Experience__c/fields/MUSW__Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Professional_Types</valueSetName>
    </valueSet>
</CustomField>